# screenshot

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/windows/: impl_clipboard.rs  impl_desktop.rs  impl_hotkey_manager.rs  mod.rs
ui/: app.slint  app_window.slint  appwindow.slint  background_window.slint  preview_window.slint
