[package]
name = "screenshot_app"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.6"
screenshots = "0.8.5"
image = "0.25.5"
chrono = "0.4.31"
slint = "1.3.2"
tokio = { version = "1.36", features = ["full"] }
winapi = { version = "0.3", features = ["winuser"] }
anyhow = "1"
global-hotkey = "0.6.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.3.2" 