[package]
name = "screenshot_app"
version = "0.1.1"
edition = "2021"

[dependencies]
raw-window-handle = "0.6"
screenshots = "0.8"
image = "0.25"
chrono = "0.4"
slint = "1.8"
tokio = { version = "1.41", features = ["full"] }
winapi = { version = "0.3", features = ["winuser"] }
anyhow = "1"
global-hotkey = "0.6"
arboard = "3.4"
tray-icon = "0.19"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.8" 


[profile.release]
panic = "abort"